[package]
name = "wasm-experiments"
version = "0.1.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.39"

boolinator = "2.4.0"
enumset = "1.0.0"

worldgen = "0.5.2"
circular-vec = { path = "circular-vec" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.39"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'Window']

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace]
